upd: mysql db insted of postgresql

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 
 NODE_ENV="development"
+PORT=5000
 URL="postgresql://postgres:postgres@localhost:5432/almunji?schema=public"
 DATABASE_URL="postgresql://<username>:<password>@127.0.0.1:5432/almunjic_webserver?schema=public"
 SHADOW_DATABASE_URL="postgresql://<username>:<password>@127.0.0.1:5432/almunjic_webserver?schema=public"
