--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 
 NODE_ENV="development"
 PORT=5000
-URL="postgresql://postgres:postgres@localhost:5432/almunji?schema=public"
-DATABASE_URL="postgresql://<username>:<password>@127.0.0.1:5432/almunjic_webserver?schema=public"
+URL="mysql://mysql:mysql@localhost:3306/almunji?schema=public"
+DATABASE_URL="mysql://<username>:<password>@127.0.0.1:3306/almunjic_webserver?schema=public"
 SHADOW_DATABASE_URL="postgresql://<username>:<password>@127.0.0.1:5432/almunjic_webserver?schema=public"
 ACCESS_TOKEN_SECRET="Your Secret"
 ACCESS_TOKEN_EXPIRES_IN="30d"
