--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "slugify": "^1.6.6",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.22.4"
   }
