add: seeding superadmin & permission

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "rootDir": "./",
     "outDir": "./dist"
   },
-  "include": ["src/**/*", "prisma/seed.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
